--- a/style/scss/components/_sheet.scss
+++ b/style/scss/components/_sheet.scss
@@ -8,3 +8,8 @@
 .roll-fear{
     cursor: pointer;
 }
+
+.editor{
+    min-height: 200px;
+    
+}
